src/objects/QPMS__Decision_Tree_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__Answer__c</fullName>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <formula>QPMS__Regulatory_Assesment__r.QPMS__Complaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complaint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Decision_Tree_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Tree  Questionnaire</label>
        <referenceTo>QPMS__Decision_Tree_Questionnaire__c</referenceTo>
        <relationshipLabel>Decision Tree Questionnaires</relationshipLabel>
        <relationshipName>Decision_Tree_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Decision_Tree_Template_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Tree Template Questionnaire</label>
        <referenceTo>QPMS__Decision_Tree_Template_Questionnaire__c</referenceTo>
        <relationshipLabel>Decision Tree Questionnaires</relationshipLabel>
        <relationshipName>Decision_Tree_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__InterPurpose_Parent__c</fullName>
        <label>InterPurpose Parent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Question_Number__c</fullName>
        <label>Question Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Question__c</fullName>
        <label>Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Assesment__c</fullName>
        <label>Regulatory Assesment</label>
        <referenceTo>QPMS__Regulatory_Assesment__c</referenceTo>
        <relationshipLabel>Decision Tree Questionnaires</relationshipLabel>
        <relationshipName>Decision_Tree_Questionnaires</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <formula>TEXT(QPMS__Regulatory_Assesment__r.QPMS__Regulatory_Body__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regulatory Body</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__height__c</fullName>
        <formula>QPMS__Decision_Tree_Template_Questionnaire__r.QPMS__height__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>height</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Decision Tree Questionnaire</label>
    <nameField>
        <label>Decision Tree Questionnaire Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Tree Questionnaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>